# arduino_torreta

./: .gitignore  DESCRIPCION_PROYECTO.md  Informe TFI - Torreta-Escaner 3D - UTN FRSR 2026.md  Propuesta_Superadora_Analisis.md  _build_pdf.py
diseño/: README.md  turret_mdf.yaml
diseño_maqueta/: DISEÑO.md  MONTAJE_COMPONENTES.md  README.md  cupones.py  maqueta_v3.py  pyproject.toml  render_foto_v2.py  torreta_fase2.py  torreta_mdf.py  torreta_v2.py  turret.yaml
diseño_maqueta/outputs/: fase2_base.glb  fase2_base_componentes.glb  fase2_base_estructura.glb  fase2_canon_cuna.glb  fase2_canon_cuna_componentes.glb  fase2_canon_cuna_estructura.glb  fase2_cuerpo.glb  fase2_cuerpo_componentes.glb  fase2_cuerpo_estructura.glb  fase2_tapa.glb  fase2_tapa_componentes.glb  fase2_tapa_estructura.glb  mdf_corte.dxf  torreta.glb  torreta_fase2.glb  torreta_fase2.step  torreta_v2.glb  torreta_v2.step  torreta_v3.glb  torreta_v3.step
diseño_maqueta/outputs/cupones/: LEER.md  cupon_01_soporte_motor.stl  cupon_02_encastre_eje.stl  cupon_03a_boss_tapa_base.stl  cupon_03b_oreja_tapa.stl  cupon_04_postes_oled.stl
diseño_maqueta/outputs/parts/: base.step  body.step  body.stl  gun.step  gun.stl
diseño_maqueta/outputs/parts_fase2/: base.stl  canon_cuna.stl  cuerpo.stl  tapa.stl
diseño_maqueta/outputs/parts_v3/: base.stl  mantelete.stl  racimo.stl  tambor_cuerpo.stl  tapa.stl
diseño_maqueta/torreta/: __init__.py  assembly.py  cli.py  export.py  geom.py  layout.py  meshtools.py  render.py
diseño_maqueta/torreta/parts/: barrels.py  base.py  body.py  pedestal.py
docs/: CONEXIONES.md  (+7 more)
(+15 files in other folders)
